Remove nn bound leafsize parameter

--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -21,28 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30162, 104)\n",
-      "Bhattacharrya upper bound: 1.0878476909979963e-39\n",
-      "Mahalanobis upper bound: 0.2200983607931948\n",
-      "Nearest Neighbor upper bound: 0.20963463961275777\n"
+      "(30162, 96)\n",
+      "Bhattacharrya upper bound: 1.3010375300488965e-47\n",
+      "Mahalanobis upper bound: 0.23955305547910302\n"
      ]
     }
    ],
    "source": [
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data_nonsingular.pkl', 'rb'))\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "print(X_train.shape)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"Bhattacharrya upper bound: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
-    "print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound(leafsize=29000)))\n"
+    "print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n"
    ]
   },
   {
