--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -29,8 +29,9 @@
      "output_type": "stream",
      "text": [
       "(30162, 96)\n",
-      "Bhattacharrya upper bound: 1.3010375300488965e-47\n",
-      "Mahalanobis upper bound: 0.23955305547910302\n"
+      "Bhattacharrya upper bound: 7.282513271497815e-05\n",
+      "Mahalanobis upper bound: 0.23553476426595135\n",
+      "Nearest Neighbor upper bound: 0.21082819441681586\n"
      ]
     }
    ],
@@ -62,6 +63,46 @@
    ],
    "source": [
     "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.0, -513.099488622868)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.slogdet(np.cov(X_train.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-512.1122911609143"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(np.linalg.svd(np.cov(X_train.T))[1]).sum()"
    ]
   },
   {
