--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -9,7 +9,7 @@
     "from ber_metrics import BEREstimator\n",
     "import numpy as np\n",
     "import pickle\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"Bhattacharrya upper bound: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
-    "print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n"
+    "print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))"
    ]
   },
   {
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "(30162, 104)"
+       "(30162, 96)"
       ]
      },
      "execution_count": 3,
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "(-1.0, -513.099488622868)"
+       "4.249009969793903e-90"
       ]
      },
      "execution_count": 7,
@@ -82,27 +82,37 @@
     }
    ],
    "source": [
-    "np.linalg.slogdet(np.cov(X_train.T))"
+    "np.linalg.det(np.cov(X_train.T))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, s, vh = np.linalg.svd(np.cov(X_train.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-512.1122911609143"
+       "-47.08455659610595"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log(np.linalg.svd(np.cov(X_train.T))[1]).sum()"
+    "eps = 1e-5\n",
+    "np.log(np.prod(s[s > eps]))"
    ]
   },
   {
@@ -114,21 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bhattacharrya upper bound: 0.02596945557312589\n",
-      "Mahalanobis upper bound: 0.18821591060670279\n",
-      "Nearest Neighbor upper bound: 0.16203143893591293\n"
+      "Bhattacharrya upper bound: 0.08397164606295981\n",
+      "Mahalanobis upper bound: 0.19586095536150863\n",
+      "Nearest Neighbor upper bound: 0.15114873035066506\n"
      ]
     }
    ],
    "source": [
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/compas/processed_violent.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/compas/processed_violent_nonsingular.pkl', 'rb'))\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "violent_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"Bhattacharrya upper bound: {}\".format(violent_estimator.bhattacharyya_bound()))\n",
@@ -138,26 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bhattacharrya upper bound: 1.3432602268871714e-08\n",
-      "Mahalanobis upper bound: 0.4158120026746693\n",
-      "Nearest Neighbor upper bound: 0.441596130592503\n"
+      "Bhattacharrya upper bound: 0.18714772071486613\n",
+      "Mahalanobis upper bound: 0.4223692451173532\n",
+      "Nearest Neighbor upper bound: 0.437726723095526\n"
      ]
     }
    ],
    "source": [
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/compas/processed_arrest.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/compas/processed_arrest_nonsingular.pkl', 'rb'))\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
-    "violent_estimator = BEREstimator(X_train, y_train)\n",
-    "print(\"Bhattacharrya upper bound: {}\".format(violent_estimator.bhattacharyya_bound()))\n",
-    "print(\"Mahalanobis upper bound: {}\".format(violent_estimator.mahalanobis_bound()))\n",
-    "print(\"Nearest Neighbor upper bound: {}\".format(violent_estimator.nn_bound()))"
+    "arrest_estimator = BEREstimator(X_train, y_train)\n",
+    "print(\"Bhattacharrya upper bound: {}\".format(arrest_estimator.bhattacharyya_bound()))\n",
+    "print(\"Mahalanobis upper bound: {}\".format(arrest_estimator.mahalanobis_bound()))\n",
+    "print(\"Nearest Neighbor upper bound: {}\".format(arrest_estimator.nn_bound()))"
    ]
   }
  ],
