Change criteria for removing singular values

--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,52 @@
      "output_type": "stream",
      "text": [
       "(30162, 96)\n",
-      "Bhattacharrya upper bound: 7.282513271497815e-05\n",
+      "> /home/matthewkol186/pton-research/cos597e/cos597efinalproject/ber_metrics.py(27)log_det_svd()\n",
+      "-> return np.log(np.prod(s[:num_to_keep]))\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /home/matthewkol186/pton-research/cos597e/cos597efinalproject/ber_metrics.py(27)log_det_svd()\n",
+      "-> return np.log(np.prod(s[:num_to_keep]))\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /home/matthewkol186/pton-research/cos597e/cos597efinalproject/ber_metrics.py(27)log_det_svd()\n",
+      "-> return np.log(np.prod(s[:num_to_keep]))\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bhattacharrya upper bound: 5.098766231936407\n",
       "Mahalanobis upper bound: 0.23553476426595135\n",
       "Nearest Neighbor upper bound: 0.21082819441681586\n"
      ]
