--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bhattacharrya upper bound: 0.028454684268292584\n",
-      "Mahalanobis upper bound: 0.23843784291450348\n"
+      "Bhattacharrya bounds: (0.0010858138355238078, 0.032933794859359676)\n",
+      "Mahalanobis upper bound: 0.23843784291450382\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "X = X_train[['capital-gain', 'capital-loss', 'hours-per-week', 'age', 'education-num']]\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
-    "print(\"Bhattacharrya upper bound: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
+    "print(\"Bhattacharrya bounds: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
     "# print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n"
    ]
@@ -54,61 +54,69 @@
      "output_type": "stream",
      "text": [
       "----Decoupled Race-----\n",
-      "(2817, 91) (2817,)\n",
+      "(2817, 43) (2817,)\n",
       "Black\n",
-      "Mahalanobis upper bound: 0.14218138104033312\n",
+      "Bhattacharrya bounds: (0.0, 3.375156207577822e-35)\n",
+      "Mahalanobis upper bound: 0.14557871466133893\n",
       "White\n",
-      "Mahalanobis upper bound: 0.2463563862753147\n",
+      "Bhattacharrya bounds: (0.0, 1.2254116732498417e-10)\n",
+      "Mahalanobis upper bound: 0.24940580729381237\n",
       "-----Decoupled Sex-------\n",
       "Male\n",
-      "Mahalanobis upper bound: 0.28243467283922163\n",
+      "Bhattacharrya bounds: (0.0, 3.093338086553273e-17)\n",
+      "Mahalanobis upper bound: 0.28529758794084903\n",
       "Male\n",
-      "Mahalanobis upper bound: 0.12619764677473774\n"
+      "Bhattacharrya bounds: (0.0, 7.874597136664248e-12)\n",
+      "Mahalanobis upper bound: 0.12875434058521865\n"
      ]
     }
    ],
    "source": [
     "# for the different groups\n",
     "print(\"----Decoupled Race-----\")\n",
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data_nonsingular.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data.pkl', 'rb'))\n",
     "X_train, y_train = X_train[X_train['race_Black']==1], y_train[X_train['race_Black']==1]\n",
     "X_test, y_test = X_test[X_test['race_Black']==1], y_test[X_test['race_Black']==1]\n",
-    "X_train = X_train.drop(labels=['race_Asian-Pac-Islander', 'race_Black', 'race_Other', 'race_White', 'sex_Male'], axis=1)\n",
+    "X_train = X_train.drop(labels=['race_White', 'race_Other', 'race_White', 'sex_Male', 'sex_Female'], axis=1)\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(X_train.shape, y_train.shape)\n",
     "print(\"Black\")\n",
+    "print(\"Bhattacharrya bounds: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
     "# print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n",
     "\n",
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data_nonsingular.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data.pkl', 'rb'))\n",
     "X_train, y_train = X_train[X_train['race_White']==1], y_train[X_train['race_White']==1]\n",
     "X_test, y_test = X_test[X_test['race_White']==1], y_test[X_test['race_White']==1]\n",
-    "X_train = X_train.drop(labels=['race_Asian-Pac-Islander', 'race_Black', 'race_Other', 'race_White', 'sex_Male'], axis=1)\n",
+    "X_train = X_train.drop(labels=['race_White', 'race_Other', 'race_White', 'sex_Male', 'sex_Female'], axis=1)\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"White\")\n",
+    "print(\"Bhattacharrya bounds: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
     "# print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n",
     "\n",
     "print(\"-----Decoupled Sex-------\")\n",
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data_nonsingular.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data.pkl', 'rb'))\n",
     "X_train, y_train = X_train[X_train['sex_Male']==1], y_train[X_train['sex_Male']==1]\n",
     "X_test, y_test = X_test[X_test['sex_Male']==1], y_test[X_test['sex_Male']==1]\n",
-    "X_train = X_train.drop(labels=['race_Asian-Pac-Islander', 'race_Black', 'race_Other', 'race_White', 'sex_Male'], axis=1)\n",
+    "X_train = X_train.drop(labels=['race_White', 'race_Other', 'race_White', 'sex_Male', 'sex_Female'], axis=1)\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"Male\")\n",
+    "print(\"Bhattacharrya bounds: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
     "# print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n",
     "\n",
-    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data_nonsingular.pkl', 'rb'))\n",
+    "X_train, y_train, X_test, y_test = pickle.load(open('Data/adult_income/processed_data.pkl', 'rb'))\n",
     "X_train, y_train = X_train[X_train['sex_Male']==0], y_train[X_train['sex_Male']==0]\n",
     "X_test, y_test = X_test[X_test['sex_Male']==0], y_test[X_test['sex_Male']==0]\n",
-    "X_train = X_train.drop(labels=['race_Asian-Pac-Islander', 'race_Black', 'race_Other', 'race_White', 'sex_Male'], axis=1)\n",
+    "X_train = X_train.drop(labels=['race_White', 'race_Other', 'race_White', 'sex_Male', 'sex_Female'], axis=1)\n",
     "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
     "adult_estimator = BEREstimator(X_train, y_train)\n",
     "print(\"Male\")\n",
+    "print(\"Bhattacharrya bounds: {}\".format(adult_estimator.bhattacharyya_bound()))\n",
     "print(\"Mahalanobis upper bound: {}\".format(adult_estimator.mahalanobis_bound()))\n",
     "# print(\"Nearest Neighbor upper bound: {}\".format(adult_estimator.nn_bound()))\n"
    ]
@@ -231,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
