Slight modifications and new MIMIC data

--- a/preprocess-mimic-iii.ipynb
+++ b/preprocess-mimic-iii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,16 +750,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_ids, feature_matrix = pickle.load(open(\"../processed/intermediate_features.pkl\", \"rb\"))"
+    "feature_matrix, labels, subject_ids =  pickle.load(open(\"/mnt/c/Users/matth/Google Drive/Coursework/Fall 2020-21/COS597E/mimic/mimic_tfidf.pkl\", \"rb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,11 +867,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(features, open(\"../processed/pre_split.pkl\", \"wb\"))"
+    "pickle.dump(features, open(\"../pre_split.pkl\", \"wb\"))"
    ]
   },
   {
@@ -916,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
