--- a/nonensemble_ber.ipynb
+++ b/nonensemble_ber.ipynb
@@ -466,19 +466,88 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([                 0,                  1,                  2,\n",
+      "                        3,                  4,                  5,\n",
+      "                        6,                  7,                  8,\n",
+      "                        9,                 10,                 11,\n",
+      "                       12,                 13,                 14,\n",
+      "                       15,                 16,                 17,\n",
+      "                       18,                 19,                 20,\n",
+      "                       21,                 22,                 23,\n",
+      "                       24,                 25,                 26,\n",
+      "                       27,                 28,                 29,\n",
+      "                       30,                 31,                 32,\n",
+      "                       33,                 34,                 35,\n",
+      "                       36,                 37,                 38,\n",
+      "                       39,         'IS_SEX_M',       'SUBJECT_ID',\n",
+      "          'IS_RACE_BLACK',    'IS_RACE_WHITE', 'IS_RACE_HISPANIC',\n",
+      "          'IS_RACE_ASIAN',    'IS_RACE_OTHER',         'IS_SEX_F'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "path = \"../mimic_dataset.pkl\"\n",
-    "data = pickle.load(open(path, 'rb'))\n",
-    "X_train, y_train, X_test, y_test = data['train_test_split']\n",
-    "\n",
+    "path = \"../mimic_compressed.pkl\"\n",
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "print(X_train.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- ALL INPUT FEATURES (MIMIC-III) ---\n",
+      "Mahalanobis upper bound: 3.2936672086581615e-06\n",
+      "Bhattacharrya upper bound: (5.6900736372267335e-05, 0.007543043064869066)\n",
+      "Nearest Neighbor upper bound: (0.02357718593308067, 0.04604260447311523)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print(\"--- ALL INPUT FEATURES (MIMIC-III) ---\")\n",
+    "print(\"Mahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"Bhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"Nearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- ALL INPUT FEATURES (MIMIC-III) ---\n",
+      "Mahalanobis upper bound: 3.2998323778607902e-06\n",
+      "Bhattacharrya upper bound: (6.879598411496657e-05, 0.008294049145473577)\n",
+      "Nearest Neighbor upper bound: (0.014275311838182647, 0.02814305462021054)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
     "X_train = X_train.drop(columns=['IS_SEX_M', 'IS_RACE_BLACK', 'IS_RACE_WHITE', 'IS_RACE_HISPANIC', 'IS_RACE_ASIAN', 'IS_SEX_F'], axis=1)\n",
-    "# X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
-    "# mimic_estimator = BEREstimator(X_train, y_train)\n",
-    "# print(\"--- ALL INPUT FEATURES (MIMIC-III) ---\")\n",
-    "# print(\"Mahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
-    "# print(\"Bhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
-    "# print(\"Nearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n"
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print(\"--- ALL INPUT FEATURES (MIMIC-III) ---\")\n",
+    "print(\"Mahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"Bhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"Nearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n"
    ]
   },
   {
@@ -487,34 +556,102 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Can only use the '.sparse' accessor with Sparse data.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-8fe30295c5d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dataset'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_coo_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5177\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5178\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5179\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5181\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/accessor.py\u001b[0m in \u001b[0;36m__get__\u001b[0;34m(self, obj, cls)\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0;31m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m         \u001b[0maccessor_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m         \u001b[0;31m# Replace the property with the accessor object. Inspired by:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m         \u001b[0;31m# http://www.pydanny.com/cached-property.html\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/arrays/sparse.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m   1955\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1956\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1957\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1958\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1959\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_validate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/arrays/sparse.py\u001b[0m in \u001b[0;36m_validate\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m   2132\u001b[0m         \u001b[0mdtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2133\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSparseDtype\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2134\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validation_msg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2136\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can only use the '.sparse' accessor with Sparse data."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----Decoupled Race-----\n",
+      "\n",
+      "BLACK\n",
+      "\tMahalanobis upper bound: 3.15407309387005e-06\n",
+      "\tBhattacharrya upper bound: (3.046635292675015e-05, 0.005519549322914704)\n",
+      "\tNearest Neighbor upper bound: (0.03252170221056294, 0.06292808219178082)\n",
+      "\n",
+      "WHITE\n",
+      "\tMahalanobis upper bound: 3.440601729633301e-06\n",
+      "\tBhattacharrya upper bound: (nan, 4.81008361793429)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthewkol186/pton-research/cos597e/cos597efinalproject/ber_metrics.py:123: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  lower_bound = 0.5 * (1 - np.sqrt(1 - 4 * p_0 * p_1 * np.exp(-2 * b_dist)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tNearest Neighbor upper bound: (0.014386493626438512, 0.02835904485514994)\n",
+      "-----Decoupled Sex-------\n",
+      "\n",
+      "FEMALE\n",
+      "\tMahalanobis upper bound: 3.373440743699323e-06\n",
+      "\tBhattacharrya upper bound: (9.697311294515343e-05, 0.009847015241205678)\n",
+      "\tNearest Neighbor upper bound: (0.018117362749018096, 0.03557824783207715)\n",
+      "\n",
+      "MALE\n",
+      "\tMahalanobis upper bound: 3.081586015114737e-06\n",
+      "\tBhattacharrya upper bound: (2.8027514198392112e-08, 0.00016741419718538654)\n",
+      "\tNearest Neighbor upper bound: (0.016200466973422645, 0.03187602368653143)\n"
      ]
     }
    ],
    "source": [
-    "data['dataset'].sparse.to_coo_matrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# for the different groups\n",
+    "print(\"----Decoupled Race-----\")\n",
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "X_train, y_train = X_train[X_train['IS_RACE_BLACK']==1], y_train[X_train['IS_RACE_BLACK']==1]\n",
+    "X_test, y_test = X_test[X_test['IS_RACE_BLACK']==1], y_test[X_test['IS_RACE_BLACK']==1]\n",
+    "X_train = X_train.drop(labels=['IS_SEX_M', 'IS_RACE_BLACK', 'IS_RACE_WHITE', 'IS_RACE_HISPANIC', 'IS_RACE_ASIAN', 'IS_SEX_F'], axis=1)\n",
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print()\n",
+    "print(\"BLACK\")\n",
+    "print(\"\\tMahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"\\tBhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"\\tNearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n",
     "\n",
-    "svd = TruncatedSVD(n_components=15, random_state=42)\n",
-    "data = svd.fit_transform(X_train) "
+    "\n",
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "X_train, y_train = X_train[X_train['IS_RACE_WHITE']==1], y_train[X_train['IS_RACE_WHITE']==1]\n",
+    "X_test, y_test = X_test[X_test['IS_RACE_WHITE']==1], y_test[X_test['IS_RACE_WHITE']==1]\n",
+    "X_train = X_train.drop(labels=['IS_SEX_M', 'IS_RACE_BLACK', 'IS_RACE_WHITE', 'IS_RACE_HISPANIC', 'IS_RACE_ASIAN', 'IS_SEX_F'], axis=1)\n",
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print()\n",
+    "print(\"WHITE\")\n",
+    "print(\"\\tMahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"\\tBhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"\\tNearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n",
+    "\n",
+    "print(\"-----Decoupled Sex-------\")\n",
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "X_train, y_train = X_train[X_train['IS_SEX_F']==1], y_train[X_train['IS_SEX_F']==1]\n",
+    "X_test, y_test = X_test[X_test['IS_SEX_F']==1], y_test[X_test['IS_SEX_F']==1]\n",
+    "X_train = X_train.drop(labels=['IS_SEX_M', 'IS_RACE_BLACK', 'IS_RACE_WHITE', 'IS_RACE_HISPANIC', 'IS_RACE_ASIAN', 'IS_SEX_F'], axis=1)\n",
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print()\n",
+    "print(\"FEMALE\")\n",
+    "print(\"\\tMahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"\\tBhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"\\tNearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = pickle.load(open(path, 'rb'))\n",
+    "X_train, y_train = X_train[X_train['IS_SEX_M']==1], y_train[X_train['IS_SEX_M']==1]\n",
+    "X_test, y_test = X_test[X_test['IS_SEX_M']==1], y_test[X_test['IS_SEX_M']==1]\n",
+    "X_train = X_train.drop(labels=['IS_SEX_M', 'IS_RACE_BLACK', 'IS_RACE_WHITE', 'IS_RACE_HISPANIC', 'IS_RACE_ASIAN', 'IS_SEX_F'], axis=1)\n",
+    "X_train, y_train, X_test, y_test = np.array(X_train), np.array(y_train), np.array(X_test), np.array(y_test)\n",
+    "mimic_estimator = BEREstimator(X_train, y_train)\n",
+    "print()\n",
+    "print(\"MALE\")\n",
+    "print(\"\\tMahalanobis upper bound: {}\".format(mimic_estimator.mahalanobis_bound()))\n",
+    "print(\"\\tBhattacharrya upper bound: {}\".format(mimic_estimator.bhattacharyya_bound()))\n",
+    "print(\"\\tNearest Neighbor upper bound: {}\".format(mimic_estimator.nn_bound()))\n",
+    "\n"
    ]
   }
  ],
